# otel-tail-sampler

./: Cargo.toml  Dockerfile  Dockerfile.cached  Dockerfile.debug  Dockerfile.local  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml
.github/workflows/: ci.yml
config/: default.yaml  production.yaml
docs/: ARCHITECTURE_V2_ICEBERG.md  CODE_REVIEW.md  DEMO_PLAN.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  LOCAL_DEVELOPMENT.md
helm-charts/tail-sampling-selector/: Chart.yaml  values.yaml
helm-charts/tail-sampling-selector/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  keda-scaledobject.yaml  secret-s3.yaml  service.yaml  serviceaccount.yaml
scripts/: demo.sh  load_simulation.rs  load_test.rs  memory_benchmark.rs  run-demo.sh  simple_producer.rs
scripts/postman/: lakekeeper-init.postman_collection.json
src/: config.rs  decoder.rs  lib.rs  main.rs  shutdown.rs  state.rs
src/datadog/: client.rs
src/kafka/: consumer.rs
src/observability/: admin_api.rs  health.rs  metrics.rs  mod.rs  oidc.rs
src/redis/: pool.rs
src/sampling/: evaluator.rs  force_sampling.rs  mod.rs  policies.rs  span_compression.rs
src/storage/: iceberg.rs  memory.rs  mod.rs
src/tests/: mod.rs
