[package]
name = "tail-sampling-selector"
version = "0.1.0"
edition = "2024"
description = "A production-ready tail-based distributed trace sampling selector for Kafka to Datadog pipelines"
authors = ["Tail Sampling Selector Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Core utilities
hex = "0.4"
prost = "0.14"
chrono = { version = "0.4", features = ["std"] }
parking_lot = "0.12"
base64 = "0.22"

# Kafka
rdkafka = { version = "0.38", features = ["tokio", "cmake-build", "ssl", "sasl"] }

# Data processing
polars = { version = "0.52", features = ["lazy", "dtype-datetime", "dtype-struct", "strings", "is_in","timezones","regex"] }

# OTLP
opentelemetry-proto = { version = "0.31.0", features = ["trace", "tonic", "with-serde"] }

# Redis
redis = { version = "1.0", features = ["tokio-comp", "connection-manager", "cluster"] }

# Configuration
config = { version = "0.14", features = ["yaml"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"

# HTTP client for Datadog API
reqwest = { version = "0.11", features = ["json", "default-tls"] }
tokio-retry = "0.3"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "fmt"] }
tracing-log = "0.2"
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
opentelemetry = { version = "0.22", features = ["metrics", "trace"] }
opentelemetry-otlp = "0.15"
opentelemetry_sdk = { version = "0.22", features = ["metrics", "trace", "rt-tokio"] }

# HTTP server for health checks
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }
hyper = "1"
warp = "0.3"

# OIDC/JWT authentication
jsonwebtoken = "9"
reqwest-middleware = "0.2"

# Serialization
bytes = "1"
uuid = { version = "1", features = ["v4", "serde"] }

# Utilities
thiserror = "2"
anyhow = "1"
dashmap = "6"
futures = "0.3"
num-traits = "0.2"
async-trait = "0.1"
hostname = "0.3"
fastrand = "2"
regex = "1"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }

# Iceberg storage with DataFusion (optional)
# Using iceberg-rust 0.7.0 which requires Rust 2024 edition and uses DataFusion 48
iceberg = { version = "0.7", optional = true }
iceberg-catalog-rest = { version = "0.7", optional = true }
iceberg-datafusion = { version = "0.7", optional = true }
datafusion = { version = "48", optional = true }
arrow-array = { version = "55", optional = true }
arrow-schema = { version = "55", optional = true }
object_store = { version = "0.12", features = ["aws"], optional = true }
parquet = { version = "55", features = ["async"], optional = true }

[features]
default = []
iceberg-storage = ["iceberg", "iceberg-catalog-rest", "iceberg-datafusion", "datafusion", "arrow-array", "arrow-schema", "object_store", "parquet"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
debug = true

[profile.release-nonlto]
codegen-units = 16
debug-assertions = false
incremental = false
inherits = "release"
lto = false
opt-level = 3
overflow-checks = false
rpath = false
strip = false            # Retain debug info for flamegraphs

[profile.ci]
debug = false
inherits = "dev"
incremental = false

# This rule applies to every package except workspace members (dependencies
# such as `arrow` and `tokio`). It disables debug info and related features on
# dependencies so their binaries stay smaller, improving cache reuse.
[profile.ci.package."*"]
debug = false
debug-assertions = false
strip = "debuginfo"
incremental = false

[profile.profiling]
inherits = "release"
debug = true
strip = false

[workspace]
